--- a/DOOM/Escalação de Times/index.html
+++ b/DOOM/Escalação de Times/index.html
@@ -20,7 +20,7 @@
   <p>Digite o codigo do jogador a ser deletado: <input id="deleteJog" type:"text"/></p>
   <button id="botao001" onclick="deleteJog()"> Deletar Jogador </button>
 
-  
+  <h2 id="list"> Escalação do Time </h2>
 
 </body>
 </html>
