--- a/DOOM/Padrao/index.html
+++ b/DOOM/Padrao/index.html
@@ -4,76 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eventos no HTML</title>
+  <title>Calculadora em JS</title>
   <script src="index.js"></script>
 </head>
 <body>
-  <h2 class="h2">HTML &lt;form&gt; element</h2>
-  <p>The HTML &lt;form&gt; element provide a document section to take input from user. It provides various interactive controls for submitting information to web server such as text field, text area, password field, etc. </p>
-  <h4 class="n">Note: The &lt;form&gt; element does not itself create a form but it is container to contain all required form elements, such as &lt;input&gt;, &lt;label&gt;, etc.</h4>
-  <p><strong>Syntax: </strong></p>
-  <div class="codeblock"><textarea name="code" class="xml">
-  &lt;form&gt;
-  //Form elements
-  &lt;/form&gt;
-  </textarea></div>
-  <hr />
-  <h2 class="h2">HTML &lt;input&gt; element</h2>
-  <p>The HTML &lt;input&gt; element is fundamental form element. It is used to create form fields, to take input from user. We can apply different input filed to gather different information form user. Following is the example to show the simple text input.</p>
-  <h2 class="h2">Example:</h2>
-  <div class="codeblock"><textarea name="code" class="xml">
-  &lt;body&gt;
-    &lt;form&gt;
-       Enter your name  &lt;br&gt;
-      &lt;input type="text" name="username"&gt;
-    &lt;/form&gt;
-  &lt;/body&gt;
-  </textarea></div>
-  <p><strong>Output:</strong></p>
-  <img src="https://static.javatpoint.com/htmlpages/images/html-form.png" alt="HTML Form" />
-  <hr />
-  <h2 class="h2">HTML TextField Control</h2>
-  <p>The type="text" attribute of input tag creates textfield control also known as single line textfield control. The name attribute is optional, but it is required for the server side component such as JSP, ASP, PHP etc.</p>
-  <div class="codeblock"><textarea name="code" class="xml">
-  &lt;form&gt;
-      First Name: &lt;input type="text" name="firstname"/&gt; &lt;br/&gt;
-      Last Name:  &lt;input type="text" name="lastname"/&gt; &lt;br/&gt;
-   &lt;/form&gt;
-  </textarea></div>
-  <p><strong>Output:</strong></p>
-  <img src="https://static.javatpoint.com/htmlpages/images/html-textfield-control.png" alt="HTML TextField Control" />
-  <h4 class="n">Note: If you will omit 'name' attribute then the text filed input will not be submitted to server.</h4>
-  <hr />
-  <h2 class="h2">HTML &lt;textarea&gt; tag in form</h2>
-  <p>The &lt;textarea&gt; tag in HTML is used to insert multiple-line text in a form. The size of &lt;textarea&gt; can be specify either using "rows" or "cols" attribute or by CSS.</p>
-  <p><strong>Example:</strong></p>
-  <div class="codeblock"><textarea name="code" class="xml">
-  &lt;!DOCTYPE html&gt;
-  &lt;html&gt;
-  &lt;head&gt;
-    &lt;title&gt;Form in HTML&lt;/title&gt;
-  &lt;/head&gt;
-  &lt;body&gt;
-    &lt;form&gt;
-        Enter your address:&lt;br&gt;
-      &lt;textarea rows="2" cols="20"&gt;&lt;/textarea&gt;
-    &lt;/form&gt;
-  &lt;/body&gt;
-  &lt;/html&gt;
-  </textarea></div>
-  <p><strong>Output:</strong></p>
-  <img src="https://static.javatpoint.com/htmlpages/images/html-textarea-tag-in-form.png" alt="HTML textarea tag in form" />
-  <hr />
-  <h2 class="h2">Label Tag in Form</h2>
-  <p>It is considered better to have label in form. As it makes the code parser/browser/user friendly. </p>
-  <p>If you click on the label tag, it will focus on the text control. To do so, you need to have for attribute in label tag that must be same as id attribute of input tag.</p>
-  <h4 class="n">NOTE: It is good to use &lt;label&gt; tag with form, although it is optional but if you will use it, then it will provide a focus when you tap or click on label tag. It is more worthy with touchscreens.</h4>
-  <div class="codeblock"><textarea name="code" class="xml">
-  &lt;form&gt;
-      &lt;label for="firstname"&gt;First Name: &lt;/label&gt; &lt;br/&gt;
-                &lt;input type="text" id="firstname" name="firstname"/&gt; &lt;br/&gt;
-     &lt;label for="lastname"&gt;Last Name: &lt;/label&gt;
-                &lt;input type="text" id="lastname" name="lastname"/&gt; &lt;br/&gt;
-   &lt;/form&gt;
+
 </body>
 </html>
